[project]
name = "stream-lit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hussnainnazi", email = "hussnain.nazir78@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.44.1",
]

[project.scripts]
stream-lit = "stream_lit:main"
huss = "stream_lit.hussnain:helloword"
khan = "stream_lit.script:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
